# alice-spotify-bridge

./: .gitignore  LICENSE  README.md
alice-skill/: .env.example  alice_spotify.js  logger.js  spotify_auth.js
bridge/: Cargo.toml  SPEC.md
bridge/src/: encoder.rs  events.rs  glagol.rs  http.rs  main.rs  sink.rs  state.rs
docs/: ALICE_SKILL_GUIDE.md  ARCHITECTURE.md
init.d/: alice_spotify  librespot_bridge
