[package]
name = "librespot-bridge"
version = "0.1.0"
edition = "2021"
description = "Spotify Connect bridge for Yandex Station via librespot"

[dependencies]
# Librespot v0.8.0
librespot = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0", default-features = false }
librespot-playback = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0", default-features = false }
librespot-core = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0" }
librespot-discovery = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0" }
librespot-connect = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot", tag = "v0.8.0" }

# MP3 encoding
mp3lame-encoder = "0.2"

# HTTP server
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
http-body = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# WebSocket (Glagol) — native-tls for self-signed cert support
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"

# HTTP client (token refresh via SOCKS)
reqwest = { version = "0.12", default-features = false, features = ["socks", "rustls-tls", "json"] }

# TLS — need ring crypto provider for rustls 0.23
rustls = { version = "0.23", features = ["ring"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Misc
bytes = "1"
parking_lot = "0.12"

# Vendored OpenSSL (librespot pulls native-tls)
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
